--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -144,10 +144,10 @@
   "l2backpack.tooltip.info.loot": "里面可能有奖励",
   "l2backpack.tooltip.info.pickup": "支持递归归类模式",
   "l2backpack.tooltip.info.pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。堆叠模式只允许不占用新的空白格子的物品被自动归类。自动拾取模式会允许物品占用背包中的空格子。",
-  "l2backpack.tooltip.mode.all": "自动拾取模式，递归生效",
+  "l2backpack.tooltip.mode.all": "全部拾取",
   "l2backpack.tooltip.mode.disp": "归类模式: %s",
   "l2backpack.tooltip.mode.none": "关闭",
-  "l2backpack.tooltip.mode.stacking": "堆叠模式，递归生效",
+  "l2backpack.tooltip.mode.stacking": "不占用空格子",
   "l2backpack.tooltip.collect.item": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
   "l2backpack.tooltip.extract.item": "蹲下右键倒出所有物品",
