--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -29,10 +29,10 @@
 		"pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。堆叠模式只允许不占用新的空白格子的物品被自动归类。自动拾取模式会允许物品占用背包中的空格子。"
 	  },
 	  "mode": {
-		"all": "自动拾取模式，递归生效",
+		"all": "全部拾取",
 		"disp": "归类模式: %s",
 		"none": "关闭",
-		"stacking": "堆叠模式，递归生效"
+		"stacking": "不占用空格子"
 	  },
 	  "collect": {
 		"item": "拿在手上右键收起工具栏以外的背包内的对应物品",
