--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -55,6 +55,10 @@
   "container.l2backpack.tool_bag": "工具切换袋",
   "itemGroup.l2library.backpack": "莱特兰·背包",
   "key.l2backpack.open": "打开背部饰品栏的容器",
+  "patchouli.l2backpack.landing": "欢迎使用莱特兰背包",
+  "patchouli.l2backpack.title": "莱特兰背包教程",
+  "advancements.l2backpack.advancements.backpacks.patchouli.description": "阅读背包教程",
+  "advancements.l2backpack.advancements.backpacks.patchouli.title": "莱特兰背包教程书",
   "advancements.l2backpack.advancements.backpacks.armor_swap.description": "取得一个护甲切换袋",
   "advancements.l2backpack.advancements.backpacks.armor_swap.title": "备用护甲",
   "advancements.l2backpack.advancements.backpacks.backpack.description": "取得一个背包",
@@ -123,6 +127,7 @@
   "advancements.l2backpack.advancements.backpacks.upgrade.title": "扩展空间",
   "advancements.l2backpack.advancements.backpacks.upgrade_max.description": "把背包升至满级",
   "advancements.l2backpack.advancements.backpacks.upgrade_max.title": "有容乃大",
+  "l2backpack.tooltip.patchouli": "阅读帕秋莉教程书获取详细信息",
   "l2backpack.tooltip.backpack_slot": "背包升级: %s / %s",
   "l2backpack.tooltip.owner": "所有者: %s",
   "l2backpack.tooltip.item.size": "容量:%s/%s",
