--- a/src/test/resources/l2backpack/lang/zh_cn/advancements.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/advancements.json
@@ -1,5 +1,7 @@
 {
   "advancements.l2backpack.advancements.backpacks": {
+	"patchouli.description": "阅读背包教程",
+	"patchouli.title": "莱特兰背包教程书",
 	"armor_swap.description": "取得一个护甲切换袋",
 	"armor_swap.title": "备用护甲",
 	"backpack.description": "取得一个背包",
