--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -14,6 +14,7 @@
   "item.l2backpack.ender_swap": "四合一切换袋",
   "item.l2backpack.tool_swap": "工具切换袋",
   "item.l2backpack.pickup_tweaker_tool": "归类模式配置器",
+  "item.l2backpack.destroy_tweaker_tool": "销毁模式配置器",
   "item.l2backpack.backpack_black": "黑色背包",
   "item.l2backpack.backpack_blue": "蓝色背包",
   "item.l2backpack.backpack_brown": "棕色背包",
@@ -144,12 +145,16 @@
   "l2backpack.tooltip.info.multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
   "l2backpack.tooltip.info.loot": "里面可能有奖励",
   "l2backpack.tooltip.info.pickup": "支持递归归类模式",
-  "l2backpack.tooltip.info.pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。Shift+右键来调整归类时是否销毁溢出物品。",
+  "l2backpack.tooltip.info.pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。",
+  "l2backpack.tooltip.info.destroy_tweaker": "右键物品栏中的背包或匣子来调整销毁模式。",
   "l2backpack.tooltip.mode.all": "全部拾取",
   "l2backpack.tooltip.mode.disp": "归类模式: %s",
-  "l2backpack.tooltip.mode.none": "关闭",
-  "l2backpack.tooltip.mode.stacking": "不占用空格子",
-  "l2backpack.tooltip.mode.destroy": "销毁溢出物品",
+  "l2backpack.tooltip.mode.none": "关闭归类",
+  "l2backpack.tooltip.mode.stacking": "堆叠归类：不占用空格子",
+  "l2backpack.tooltip.destroy.none": "禁用销毁",
+  "l2backpack.tooltip.destroy.excess": "溢出销毁",
+  "l2backpack.tooltip.destroy.match": "过滤销毁",
+  "l2backpack.tooltip.destroy.all": "全部销毁",
   "l2backpack.tooltip.collect.item": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
   "l2backpack.tooltip.extract.item": "蹲下右键倒出所有物品",
