--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -27,14 +27,20 @@
 		"multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
 		"loot": "里面可能有奖励",
 		"pickup": "支持递归归类模式",
-		"pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。Shift+右键来调整归类时是否销毁溢出物品。"
+		"pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。",
+		"destroy_tweaker": "右键物品栏中的背包或匣子来调整销毁模式。"
 	  },
 	  "mode": {
 		"all": "全部拾取",
 		"disp": "归类模式: %s",
-		"none": "关闭",
-		"stacking": "不占用空格子",
-		"destroy": "销毁溢出物品"
+		"none": "关闭归类",
+		"stacking": "堆叠归类：不占用空格子"
+	  },
+	  "destroy": {
+		"none": "禁用销毁",
+		"excess": "溢出销毁",
+		"match": "过滤销毁",
+		"all": "全部销毁"
 	  },
 	  "collect": {
 		"item": "拿在手上右键收起工具栏以外的背包内的对应物品",
