--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -16,7 +16,8 @@
 	"combined_swap": "三合一切换袋",
 	"ender_swap": "四合一切换袋",
 	"tool_swap": "工具切换袋",
-	"pickup_tweaker_tool": "归类模式配置器"
+	"pickup_tweaker_tool": "归类模式配置器",
+	"destroy_tweaker_tool": "销毁模式配置器"
   },
   "-cartesian": {
 	"backpack": {
