--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -148,12 +148,11 @@
   "l2backpack.tooltip.info.pickup_tweaker": "右键物品栏中的背包或匣子来调整归类模式。",
   "l2backpack.tooltip.info.destroy_tweaker": "右键物品栏中的背包或匣子来调整销毁模式。",
   "l2backpack.tooltip.mode.all": "全部拾取",
-  "l2backpack.tooltip.mode.disp": "归类模式: %s",
   "l2backpack.tooltip.mode.none": "关闭归类",
   "l2backpack.tooltip.mode.stacking": "堆叠归类：不占用空格子",
   "l2backpack.tooltip.destroy.none": "禁用销毁",
   "l2backpack.tooltip.destroy.excess": "溢出销毁",
-  "l2backpack.tooltip.destroy.match": "过滤销毁",
+  "l2backpack.tooltip.destroy.matching": "过滤销毁",
   "l2backpack.tooltip.destroy.all": "全部销毁",
   "l2backpack.tooltip.collect.item": "拿在手上右键收起工具栏以外的背包内的对应物品",
   "l2backpack.tooltip.collect.drawer": "拿在手上蹲下右键收起背包内的对应物品",
