--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -32,14 +32,13 @@
 	  },
 	  "mode": {
 		"all": "全部拾取",
-		"disp": "归类模式: %s",
 		"none": "关闭归类",
 		"stacking": "堆叠归类：不占用空格子"
 	  },
 	  "destroy": {
 		"none": "禁用销毁",
 		"excess": "溢出销毁",
-		"match": "过滤销毁",
+		"matching": "过滤销毁",
 		"all": "全部销毁"
 	  },
 	  "collect": {
