--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,8 @@
 - add wand page TODO
 - keybind name TODO
 
-- add void mode
-
 2.4.16
+- add pickup destroy mode
 - Fix bag load displaying 0 item
 - Pickup prioritize latest mode
 - Remove multi-switch and ender-switch from advancements
