--- a/src/test/resources/l2backpack/lang/zh_cn/item.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/item.json
@@ -13,6 +13,7 @@
 	"drawer": "水晶匣子",
 	"ender_drawer": "末影匣子",
 	"armor_swap": "护甲切换袋",
+	"suit_swap": "套装切换袋",
 	"combined_swap": "三合一切换袋",
 	"ender_swap": "四合一切换袋",
 	"tool_swap": "工具切换袋",
