--- a/src/main/resources/assets/l2backpack/lang/zh_cn.json
+++ b/src/main/resources/assets/l2backpack/lang/zh_cn.json
@@ -10,6 +10,7 @@
   "item.l2backpack.drawer": "水晶匣子",
   "item.l2backpack.ender_drawer": "末影匣子",
   "item.l2backpack.armor_swap": "护甲切换袋",
+  "item.l2backpack.suit_swap": "套装切换袋",
   "item.l2backpack.combined_swap": "三合一切换袋",
   "item.l2backpack.ender_swap": "四合一切换袋",
   "item.l2backpack.tool_swap": "工具切换袋",
@@ -54,6 +55,7 @@
   "container.l2backpack.ender_switch": "四合一切换袋",
   "container.l2backpack.multi_switch": "三合一切换袋",
   "container.l2backpack.tool_bag": "工具切换袋",
+  "container.l2backpack.armor_set": "套装切换袋",
   "itemGroup.l2library.backpack": "莱特兰·背包",
   "key.l2backpack.open": "打开背部饰品栏的容器",
   "patchouli.l2backpack.landing": "欢迎使用莱特兰背包",
@@ -129,6 +131,7 @@
   "l2backpack.tooltip.owner": "所有者: %s",
   "l2backpack.tooltip.item.size": "容量:%s/%s",
   "l2backpack.tooltip.drawer.content": "内容物：%s x%s",
+  "l2backpack.tooltip.info.suit_bag": "和盔甲切换袋相同，但是一次切换一套。如果选中行有空格子，会取下玩家身上的护甲",
   "l2backpack.tooltip.info.drawer": "在任意GUI内，用物品左键匣子来存入物品，右键匣子取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
   "l2backpack.tooltip.info.arrow_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
   "l2backpack.tooltip.info.quick_inv": "右键打开，或者在玩家背包/末影箱/空间背包的GUI内右键快捷访问",
@@ -138,8 +141,8 @@
   "l2backpack.tooltip.info.ender_drawer": "使用方法同匣子。所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式。和匣子一样有归类模式配置。",
   "l2backpack.tooltip.info.upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
   "l2backpack.tooltip.info.exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
-  "l2backpack.tooltip.info.tool_bag": "放在副手/胸甲栏/饰品栏，蹲下并主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择物品，按R切换",
-  "l2backpack.tooltip.info.armor_bag": "放在副手/胸甲栏/饰品栏，蹲下并空主手可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择护甲，按R切换",
+  "l2backpack.tooltip.info.tool_bag": "放在副手/胸甲栏/饰品栏，蹲下并主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择物品，按%s切换",
+  "l2backpack.tooltip.info.armor_bag": "放在副手/胸甲栏/饰品栏，蹲下并空主手可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择护甲，按%s切换",
   "l2backpack.tooltip.info.ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
   "l2backpack.tooltip.info.inherit": "继承背包的所有功能，只是不能升级。能放在普通背包中，但是不能在普通背包中直接打开。放在空间背包中启用快捷访问功能。",
   "l2backpack.tooltip.info.multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
