--- a/src/test/resources/l2backpack/lang/zh_cn/text.json
+++ b/src/test/resources/l2backpack/lang/zh_cn/text.json
@@ -11,6 +11,7 @@
 		"content": "内容物：%s x%s"
 	  },
 	  "info": {
+		"suit_bag": "和盔甲切换袋相同，但是一次切换一套。如果选中行有空格子，会取下玩家身上的护甲",
 		"drawer": "在任意GUI内，用物品左键匣子来存入物品，右键匣子取出物品。只能存放一种没有NBT的物品，但是能储存64组。",
 		"arrow_bag": "放在副手/胸甲栏/饰品栏，主手持弓，可以从箭袋内预览、选择、使用箭矢。按shift+数字键或者上下选择箭",
 		"quick_inv": "右键打开，或者在玩家背包/末影箱/空间背包的GUI内右键快捷访问",
@@ -20,8 +21,8 @@
 		"ender_drawer": "使用方法同匣子。所有设置了相同物品且是相同所有者的末影匣子共用相同的空间，包括物品和方块形式。和匣子一样有归类模式配置。",
 		"upgrade": "在锻造台中使用空间升级组件来升级。内容物品和名字会被保留",
 		"exit": "关闭GUI时会回到上一个GUI（只能回到玩家背包/末影箱/空间背包），shift+esc全部关闭",
-		"tool_bag": "放在副手/胸甲栏/饰品栏，蹲下并主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择物品，按R切换",
-		"armor_bag": "放在副手/胸甲栏/饰品栏，蹲下并空主手可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择护甲，按R切换",
+		"tool_bag": "放在副手/胸甲栏/饰品栏，蹲下并主手持工具/武器（或者空手按Alt），可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择物品，按%s切换",
+		"armor_bag": "放在副手/胸甲栏/饰品栏，蹲下并空主手可以从袋内预览、选择、快速切换。蹲下按数字键或者上下选择护甲，按%s切换",
 		"ender_switch": "同时拥有三合一切换袋和末影背包的功能。注意箭/工具/护甲是储存在这个物品内的，而不是末影箱内",
 		"inherit": "继承背包的所有功能，只是不能升级。能放在普通背包中，但是不能在普通背包中直接打开。放在空间背包中启用快捷访问功能。",
 		"multi_switch": "同时拥有箭/工具/护甲的快速切换功能。蹲下并主手持对应物品激活对应模式。空手按alt激活工具切换模式。",
